unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <formula>IF(OR(ISPICKVAL( SBQQ__Product__r.Product_Type__c , &#39;SaaS&#39;),
ISPICKVAL( SBQQ__Product__r.Product_Type__c , &#39;Recurring&#39;)) , SBQQ__NetTotal__c , null)</formula>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>