unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Frequency_Term__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_Term__c</fullName>
    <formula>IF( ISPICKVAL( SBQQ__Product__r.Product_Category__c , &#39;Professional Services&#39;) , 
TEXT(SBQQ__Quote__r.SBQQ__Account__r.Uses_MSA_of__r.Invoicing_Terms_Services__c ) ,TEXT(SBQQ__Quote__r.SBQQ__Account__r.Uses_MSA_of__r.Invoicing_Frequency_SaaS__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency / Term</label>
    <type>Text</type>
</CustomField>