unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Contracted_Price_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price_Percentage__c</fullName>
    <formula>(SBQQ__ListPrice__c -  SBQQ__SpecialPrice__c)*0.01</formula>
    <label>Contracted Price Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>