unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/DPSA_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DPSA_Discount_Percentage__c</fullName>
    <description>Used in Tier Pricing Calculation in the Price Rules</description>
    <label>DPSA Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>