unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/New_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>New_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Quote Line</label>
    <type>Checkbox</type>
</CustomField>