unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <formula>IF(TEXT(SBQQ__Product__r.SBQQ__SubscriptionPricing__c) = &#39;&#39;, SBQQ__NetTotal__c, 0)</formula>
    <label>Non-Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>