unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/One_Time_Add_on__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Add_on__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Add on</label>
    <type>Checkbox</type>
</CustomField>