unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Plant_Product_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Product Transaction</label>
    <referenceTo>Plant_Product_Transaction__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>