unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QS_Annual_Recurring_Revenue__c</fullName>
    <description>Annualized Subscription Fee for this specific product. 

Standard Formula (DO NOT EDIT):
IF(
TEXT(SBQQ__SubscriptionPricing__c) = &#39;&#39;,
0,
( SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c ) / ( SBQQ__DefaultSubscriptionTerm__c / 12 ) )</description>
    <formula>/*NOTE: The below formula is designed to calculate a negative ARR when Quantity decreases. If this needs to change, the following logic can be added to the end of the formula BETWEEN the last two parenthesis: * IF( SBQQ__Quantity__c &lt; SBQQ__PriorQuantity__c, -1, 1)*/


/*IF(

TEXT(SBQQ__SubscriptionPricing__c) = &#39;&#39;,

0,

(SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c) / (SBQQ__DefaultSubscriptionTerm__c / 12))*/


/*IF(
TEXT(SBQQ__SubscriptionPricing__c) = &#39;&#39;,0,
IF( SBQQ__Quantity__c &lt; SBQQ__PriorQuantity__c,0,(Related_PPT_s_Net_Total_Final__c)))   Done by Utkarsh/Nitin on October 06, 2022*/

/* Nitin 16 October
 Annual_Recurring_Revenue__c  16 Oct */

IF (Annual_Recurring_Revenue__c = 0, (SBQQ__EffectiveQuantity__c * (SBQQ__ProratedPrice__c / SBQQ__ProrateMultiplier__c)), Annual_Recurring_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized Subscription Fee for this specific product.</inlineHelpText>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>