unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_ARR_Growth__c.field-meta.xml
<CustomField>
    <fullName>QS_ARR_Growth__c</fullName>
    <description>Change in Recurring Revenue for this Quote Line. Dependent on a Price Rule setting the Initial and Uplift ARR Fields.</description>
    <formula>QS_Annual_Recurring_Revenue__c - QS_Initial_ARR__c - QS_Uplift_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Change in Recurring Revenue for this Quote Line</inlineHelpText>
    <label>ARR Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>