unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Initial_ARR__c.field-meta.xml
<CustomField>
    <fullName>QS_Initial_ARR__c</fullName>
    <description>Starting Recurring Revenue for this Quote Line. Set by Price Rule: Set Initial QL Values</description>
    <inlineHelpText>The Starting ARR balance for this Line Item. Is 0 by default for all New Product and Amendment sales</inlineHelpText>
    <label>Initial ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>