unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Initial_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_Initial_Quantity__c</fullName>
    <description>The Starting Quantity for this Line Item. Is 0 by default for all New Product and Amendment sales. Must be set by a Price Rule on Quote Line creation.</description>
    <inlineHelpText>The Starting Quantity for this Line Item. Is 0 by default for all New Product and Amendment sales.</inlineHelpText>
    <label>Initial Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>