unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Line_Classification__c.field-meta.xml
<CustomField>
    <fullName>QS_Line_Classification__c</fullName>
    <label>Line Classification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>