unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Line_Classification_Product_Solution__c.field-meta.xml
<CustomField>
    <fullName>QS_Line_Classification_Product_Solution__c</fullName>
    <formula>SBQQ__Product__r.Line_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Classification Product Solution</label>
    <type>Text</type>
</CustomField>