unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Quantity_Change__c.field-meta.xml
<CustomField>
    <fullName>QS_Quantity_Change__c</fullName>
    <formula>SBQQ__Quantity__c - QS_Initial_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>