unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QS_Uplift_ARR__c.field-meta.xml
<CustomField>
    <fullName>QS_Uplift_ARR__c</fullName>
    <description>Increased ARR from a renewal price increase.</description>
    <formula>(QS_Annual_Recurring_Revenue__c*SBQQ__Uplift__c)/(SBQQ__Uplift__c+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Increased ARR from a renewal price increase.</inlineHelpText>
    <label>Uplift ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>