unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_For_Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Quantity_For_Discount_Tier__c</fullName>
    <description>Used for Discount tier selection by Discount Schedules</description>
    <formula>SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Discount tier selection by Discount Schedules</inlineHelpText>
    <label>Quantity For Discount Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>