unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_Of_Measure__c</fullName>
    <formula>TEXT( SBQQ__Product__r.QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unit Of Measure</label>
    <type>Text</type>
</CustomField>