unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Related_PPT_s_Net_Total_Final__c.field-meta.xml
<CustomField>
    <fullName>Related_PPT_s_Net_Total_Final__c</fullName>
    <description>Field created to eliminate Standard field rounding Issue ( SBQQ__NetTotal__c )</description>
    <formula>IF(Related_PPT_s_Net_Total__c = 0,  SBQQ__NetTotal__c , Related_PPT_s_Net_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>