unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Swap_Migration__c.field-meta.xml
<CustomField>
    <fullName>Swap_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Swap/Migration</label>
    <type>Checkbox</type>
</CustomField>