unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Tier_2_Price__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Price__c</fullName>
    <label>Tier 2 Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>